--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="jumbotron text-center">
       <img src="img/5x5 .jpg" alt="Rakhmat Sani" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Rakhmat Sani</h1>
-      <p class="lead">Pipeline Engineer who enthusiast with cook and bake.</p>
+      <p class="lead">Engineer who enthusiast with cook and bake.</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
